--- a/testPmz-com-vue/index.html
+++ b/testPmz-com-vue/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>testpmz-com-vue</title>
   </head>
   <body style="margin:0;">
